<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/user_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextEmailLogin"
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextPasswordLogin"
            android:layout_margin="15dp"
            tools:targetApi="Q"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSignIn"
            android:layout_margin="15dp"
            android:text="@string/signIn"
            android:clickable="true"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewSignUp"
            android:clickable="true"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimary"
            android:text="@string/not_have_an_account_sign_up_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>