<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <LinearLayout
        android:id="@+id/layout_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/user_registration"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            tools:targetApi="Q" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/register_user"
            android:textColor="@android:color/white"
            app:cornerRadius="5dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewSignin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/already_registered_sign_in_here"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_register"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_small"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>